--- a/post53.html
+++ b/post53.html
@@ -20,7 +20,7 @@
 </div>
 <h2>53 Reconsidering the Romantics: Making It More Rigorous</h2>
 <p>For dozens of posts, I've been diagnosing what I call the "Romantic trace" in our contemporary debates about AI. I've argued that our anxieties about authenticity, the "human spark," and soulless machines are echoes of a worldview we inherited from the 1800s. It's a worldview I've suggested is inadequate for our current technological moment.</p>
-<p>But a critique is only as good as the version of the thing it criticizes. Maybe I've been attacking a sentimentalized caricature of the Romantic. By reducing it to a set of gut feelings, I may have underestimated my subject. True Romanticism wasn't just a mood; it was a fierce, coherent, and revolutionary worldview forged in direct opposition to what Thomas Carlyle called the "Mechanical Age." It was a spiritual and philosophical resistance to a world being remade by the logic of the machine.</p>
+<p>But a critique is only as good as the version of the thing it criticizes. Maybe I've been attacking a sentimentalized caricature of the Romantic. By reducing it to a set of gut feelings, I may have underestimated my subject. True Romanticism wasn't just a mood; it was a fierce, coherent, and revolutionary worldview forged in direct opposition to what Thomas Carlyle called the "Mechanical Age." It was a spiritual and philosophical resistance to a world being remade by the logic of the machine. As scholars like René Wellek have demonstrated, the Romantic movement possessed an underlying intellectual unity across Europe, defined by a shared set of philosophical commitments and a conscious, programmatic opposition to Neoclassicism.<sup><a href="#ref1">1</a></sup></p>
 <p>This series of posts is an attempt to correct my earlier approach. Before we dismiss the Romantic worldview, we must first build its strongest, most principled form. We need to understand it not as a collection of feelings, but as a powerful counter-project against the very mechanistic philosophy that finds its ultimate expression in artificial intelligence.</p>
  
 
@@ -67,6 +67,12 @@
   <p>To move forward, we first have to understand the strongest form of the resistance. We must understand the Romantic argument on its own terms.</p>
 
   <hr>
+  <div class="references">
+      <h3>References</h3>
+      <ol>
+        <li id="ref1">René Wellek, "The Concept of 'Romanticism' in Literary History," <em>Comparative Literature</em> (1949).</li>
+      </ol>
+  </div>
   <p class="series-note">Here's the <a href="romantic-quick-kit.html">Quick Kit</a> mentioned above as the starting point for the posts that follow.</p>
   <p><a href="index.html">Home</a> | <a href="post52.html">Previous Post</a> | <a href="post54.html">Next Post</a></p>
 </article>
