--- a/post55.html
+++ b/post55.html
@@ -32,6 +32,8 @@
     <li>A <strong>Romantic hermeneutic reading</strong> sees something far worse. This is not "productive confusion." Schlegel's method sought the hidden depths of a <em>human</em> mind. Blake's art was a product of the "Divine Humanity."<sup><a href="#ref3">3</a></sup> The AI's contradictions are not the sign of a struggling soul, but the meaningless output of a purely mechanical process. It is chaos,<sup><a href="#ref4">4</a></sup> not unconscious meaning.</li>
   </ul>
   
+  <p>Furthermore, Schlegel's ideal work was a <em>Roman</em>, a "Mischgedicht" where different genres and styles were fused by a singular, unifying vision. The 'confusions' in such a work are the signs of a human mind struggling to synthesize this totality. An AI's output, however, is also a "Mischgedicht"—a statistical blend of the myriad genres in its training data—but it is a mixture without a unifying purpose. This understanding of the <em>Roman</em> as a 'mixed genre' is central to Schlegel's thought.<sup><a href="#ref5">5</a></sup> Its contradictions are not scars from a 'Mental Fight,' but the meaningless seams of a purely mechanical process.</p>
+
   <h3>The Critical Pivot: The Unconscious vs. The Unthinking</h3>
   <p>Here the Romantic method delivers its judgment. The "unconscious" of a human artist is a wellspring of vision, intuition, and buried truth. The process of an AI is unthinking. Its "confusions" reveal nothing but the statistical noise of its training data. They are accidents of the machine, not symbols from the soul.</p>
   <p>For Blake, who fought against the "dark Satanic Mills" of a mechanistic worldview, an AI's text would be the ultimate artifact of that satanic logic.<sup><a href="#ref2">2</a></sup> It is a system that mimics the form of creation without the divine spark of imagination that makes it sacred. The "bullshit" critique is a secular complaint. The Romantic critique is theological: the AI's output is not a flawed text to be interpreted, but a hollow idol, a profane imitation of the divine act of creation.</p>
@@ -44,6 +46,7 @@
       <li id="ref2">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>.</li>
       <li id="ref3">William Blake, <a href="https://www.poetryfoundation.org/poems/43656/the-divine-image" target="_blank" rel="noopener">"The Divine Image"</a> from <em>Songs of Innocence</em>, which speaks of "the human form divine."</li>
       <li id="ref4">The term "chaos" here is used in its modern sense of meaningless disorder. However, ancient ideas of <a href="https://en.wikipedia.org/wiki/Chaos_(cosmogony)" target="_blank">Chaos</a> as a primordial, unformed state from which the cosmos emerged could offer a fascinating line of speculative research, especially in connection with LLMs, aesthetics, and the Romantic critique of mechanistic creation.</li>
+      <li id="ref5">Hans Eichner, "Friedrich Schlegel's Theory of Romantic Poetry," <em>PMLA</em>, vol. 71, no. 5, 1956, pp. 1018–41. JSTOR, <a href="https://www.jstor.org/stable/460525" target="_blank">https://www.jstor.org/stable/460525</a>.</li>
     </ol>
   </div>
   <p class="series-note">This post is part of the <em>"Reconsidering the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
