--- a/post56.html
+++ b/post56.html
@@ -34,7 +34,7 @@
       <div class="references">
         <h3>References</h3>
         <ol>
-          <li id="ref3">William Blake, <a href="https://www.poetryfoundation.org/poems/43656/the-divine-image" target="_blank" rel="noopener">William Blake, "The Divine Image" (Songs of Innocence)</a> from <em>Songs of Innocence</em>, which speaks of "the human form divine."</li>
+          <li id="ref1">William Blake, <a href="https://www.poetryfoundation.org/poems/43656/the-divine-image" target="_blank" rel="noopener">"The Divine Image"</a> from <em>Songs of Innocence</em>, which speaks of "the human form divine."</li>
           <li id="ref2">Thomas Carlyle, <a href="https://victorianweb.org/authors/carlyle/signs1.html" target="_blank">"Signs of the Times" (1829)</a>.</li>
           <li id="ref3">E.T.A. Hoffmann, <a href="https://www.gutenberg.org/cache/epub/31377/pg31377-images.html#div1_sand_man" target="_blank">"The Sandman" (public-domain English translation)</a>. This story is a canonical Romantic exploration of the uncanny valley and the anxiety over automata.</li>
         </ol>
