--- a/romantic-kit-authenticity.html
+++ b/romantic-kit-authenticity.html
@@ -28,7 +28,7 @@
     <ul>
       <li><strong>Germany (The Unique Vision):</strong> Building on Herder's idea that every people (<em>Volk</em>) has its own unique spirit (<em>Volksgeist</em>), German Romantics sought an authenticity of thought. A work was authentic if its form was a necessary expression of a singular philosophical or spiritual insight, breaking from classical rules to create its own.</li>
       <li><strong>England (The Language of Real Life):</strong> In their "Preface to Lyrical Ballads," Wordsworth and Coleridge pursued authenticity in diction and subject. They rejected the "gaudy and inane phraseology" of earlier poetry. The evidence of authenticity in their work is the deliberate choice of "language really used by men" and the dignifying of rustic, common life as a serious subject for art.</li>
-      <li><strong>America (The Nonconformist Self):</strong> The Transcendentalists radicalized authenticity into an ethical principle of nonconformity. For Emerson, it was a duty to "Trust thyself." For Thoreau, it was a lived experiment in stripping away the inessential. American Romantic authenticity is evidenced by a text's active protest against social and intellectual imitation.</li>
+      <li><strong>America (The Nonconformist Self):</strong> The Transcendentalists radicalized authenticity into an ethical principle of nonconformity. For Emerson, it was a duty to "Trust thyself." For Thoreau, it was a lived experiment in stripping away the inessential. American Romantic authenticity is evidenced by a text's active protest against social and intellectual imitation. They even developed an authentic style to match, the "catalogue rhetoric," an open, expansive form designed to mirror their democratic vision of a unified spiritual cosmos, rejecting what they saw as the closed, hierarchical forms of European tradition.<sup><a href="#ref1">1</a></sup></li>
     </ul>
 
     <h2>The Legacy of Authenticity</h2>
@@ -38,13 +38,18 @@
     <p>The quest for authenticity was more than a stylistic preference; it was a profound spiritual project. Many Romantic works are a form of secular "theodicy," an attempt to justify the ways of the world to the individual mind. Where Milton sought to "justify the ways of God to men," a poet like Wordsworth sought to justify the experience of loss and suffering as essential to the growth of his own mind.</p>
     <p>Authenticity, in this view, is earned. It is the wisdom achieved by one who has journeyed through what Keats called the <a href="https://lewisiana.nl/painquotes/keats-on-soul-making.pdf">"vale of Soul-making."</a> The authentic self is not the innocent self, but the self that has fallen into division and despair, and has re-forged its identity on a higher level of consciousness. The suffering is justified because it creates a more profound, more resilient, and more complete individual.</p>
     
-    <h3>Further Reading (Open Sources)</h3>
+    <h3>Further Reading (Open Sources & Scholarship)</h3>
     <ul>
       <li><strong>Manifestos of Authenticity:</strong>
         <ul>
           <li>Ralph Waldo Emerson, <a href="https://nationalhumanitiescenter.org/pds/triumphnationalism/cman/text8/selfreliance.pdf"><em>Self-Reliance</em></a> (1841)</li>
           <li>Henry David Thoreau, <a href="https://www.gutenberg.org/files/205/205-h/205-h.htm"><em>Walden</em></a> (1854)</li>
           <li>William Wordsworth, <a href="https://anthologydev.lib.virginia.edu/work/Wordsworth/wordsworth-preface">“Preface to Lyrical Ballads” (1800)</a></li>
+        </ul>
+      </li>
+      <li><strong>Scholarship:</strong>
+        <ul>
+          <li id="ref1">Lawrence Buell, "Transcendentalist Catalogue Rhetoric: Vision Versus Form," <em>American Literature</em> (1968).</li>
         </ul>
       </li>
     </ul>
