--- a/romantic-kit-contexts-germany.html
+++ b/romantic-kit-contexts-germany.html
@@ -21,7 +21,8 @@
 
     <h3>Signature Ideas</h3>
     <ul>
-      <li><strong>The Fusion of Everything:</strong> The central project, articulated by Friedrich Schlegel, was "progressive universal poetry"—a dynamic, infinitely expandable form of art that could absorb philosophy, criticism, and mythology. The goal was to overcome the fragmentation of modern life.</li>
+      <li><strong>A New Critical Program:</strong> A core project of the German Romantics, particularly the Schlegel brothers, was to transform the very meaning of the word <em>romantisch</em>. As René Wellek has shown, they took a term that historically referred to medieval romances (like those of Ariosto and Cervantes) and repurposed it into a conscious, polemical, and philosophical program. "Romantic" became the banner for a new kind of art defined in opposition to the rules and constraints of Neoclassicism.<sup><a href="#ref2">2</a></sup></li>
+      <li><strong>The Fusion of Everything:</strong> The central project, articulated by Friedrich Schlegel, was "progressive universal poetry"—a dynamic, infinitely expandable form of art that could absorb philosophy, criticism, and mythology. A key influence on Schlegel was Johann Gottfried Herder, who saw the <em>Roman</em> (a term encompassing not just the modern novel but also medieval romances and even Shakespeare's plays) as the representative genre of the post-classical era. Herder characterized the <em>Roman</em> by its "Mischung" (mixture) of genres. Schlegel adopted and radicalized this idea, seeing the <em>Roman</em> as the ultimate "Mischgedicht" (mixed genre) destined to synthesize all other forms of poetry, philosophy, and criticism into a new, living whole.<sup><a href="#ref1">1</a></sup></li>
       <li><strong><a href="romantic-kit-organic-form.html">Organic Unity</a> as Metaphysics:</strong> Friedrich Schelling’s <em>Naturphilosophie</em> gave philosophical weight to the organic metaphor. It argued that nature and mind were two sides of the same living, creative reality, providing a powerful basis for theories of organic form in art.</li>
       <li><strong>Romantic Irony:</strong> A sophisticated concept where a work of art demonstrates self-awareness. The author can signal their detachment from their own creation, acknowledging its limits and opening it to endless interpretation. It is a mark of artistic freedom and intellectual agility.</li>
       <li><strong>The Primacy of the Aesthetic:</strong> For the German Romantics, art was not mere decoration; it was the highest form of knowledge. They believed a work of art could reveal truths about the Absolute that rational philosophy could only point to.</li>
@@ -36,10 +37,12 @@
       <li><strong>Key Figures:</strong> Friedrich and August Wilhelm Schlegel (the theorists), Novalis (the visionary poet), Friedrich Schelling (the philosopher), and Friedrich Schleiermacher (the theologian and hermeneuticist).</li>
     </ul>
 
-    <h3>Open Texts (The Primary Sources)</h3>
+    <h3>Primary Sources & Further Reading</h3>
     <ul>
       <li>Friedrich Schlegel, <a href="https://germanhistorydocs.org/en/the-holy-roman-empire-1648-1815/friedrich-schlegel-athanaeum-fragments-1798"><em>Athenaeum Fragments</em> (selections)</a> — The manifesto of the Jena school, in its characteristic form.</li>
       <li>Friedrich Schlegel, <a href="https://archive.org/details/friedrichschlege0000schl_o3n2"><em>Philosophical Fragments</em> (PDF)</a> — A deeper dive into the theoretical project.</li>
+      <li id="ref1">Hans Eichner, "Friedrich Schlegel's Theory of Romantic Poetry," <em>PMLA</em> (1956). This article provides a detailed account of Schlegel's debt to Herder and his development of the theory of the <em>Roman</em>.</li>
+      <li id="ref2">René Wellek, "The Concept of 'Romanticism' in Literary History," <em>Comparative Literature</em> (1949).</li>
     </ul>
     <div class="bottom-links">
       <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
