--- a/romantic-kit-glossary.html
+++ b/romantic-kit-glossary.html
@@ -48,6 +48,9 @@
 
       <dt><a href="romantic-kit-organic-form.html">Mechanical Form</a></dt>
       <dd>For Coleridge, a form imposed on material from the outside, like a mold. It is the direct opposite of <strong>Organic Form</strong>. It follows pre-set rules and is associated with "Fancy."</dd>
+      
+      <dt>Mischgedicht</dt>
+      <dd>(German: 'mixed poem/genre'). A term central to Friedrich Schlegel's theory, describing the <em>Roman</em> as a genre that intentionally fuses different forms (epic, lyric, dramatic) and modes (poetry, prose, criticism). It is the structural basis of "progressive universal poetry."</dd>
 
       <dt>Natural Supernaturalism</dt>
       <dd>A phrase from Carlyle’s <em>Sartor Resartus</em> that M. H. Abrams used to describe the Romantic secularization of inherited theological patterns (fall, redemption, apocalypse) into a worldview grounded in mind and nature.</dd>
@@ -57,7 +60,13 @@
 
       <dt><a href="romantic-kit-organic-form.html">Organic Form</a></dt>
       <dd>The principle that a work’s form should grow from its inner idea, like a plant from a seed. It is shaped by the creative "Imagination."</dd>
+
+      <dt>Progressive Universalpoesie (Progressive Universal Poetry)</dt>
+      <dd>Friedrich Schlegel's term for the ultimate goal of Romantic art. It was not just an abstract idea but was specifically embodied in the genre of the <em>Roman</em>, which he saw as a 'Mischgedicht' capable of endlessly combining all forms of art and knowledge.</dd>
       
+      <dt>Roman (Schlegelian)</dt>
+      <dd>For Friedrich Schlegel, not just the modern novel, but the central, all-encompassing genre of modern (i.e., post-classical) art. Following Herder, he included medieval romances, the works of Dante, Cervantes, and even Shakespeare's plays under this term. The <em>Roman</em> was the vehicle for "progressive universal poetry" and the highest form of <em>romantische Poesie</em>.</dd>
+
       <dt><a href="romantic-kit-hermeneutics.html">Romantic Hermeneutics</a></dt>
       <dd>The methodical art of interpretation, based on the premise that misunderstanding is the norm. It uses the hermeneutic circle and the two rails to reconstruct a work's meaning.</dd>
 
@@ -84,6 +93,12 @@
       <li>Carlyle, <a href="https://victorianweb.org/authors/carlyle/signs1.html">“Signs of the Times”</a></li>
       <li>Emerson, <a href="https://nationalhumanitiescenter.org/pds/triumphnationalism/cman/text8/selfreliance.pdf"><em>Self-Reliance</em></a></li>
     </ul>
+
+    <h3>Key Scholarship</h3>
+    <ul>
+      <li>Hans Eichner, "Friedrich Schlegel's Theory of Romantic Poetry," <em>PMLA</em>, vol. 71, no. 5, 1956, pp. 1018–41. JSTOR, <a href="https://www.jstor.org/stable/460525" target="_blank">https://www.jstor.org/stable/460525</a>.</li>
+    </ul>
+
     <div class="bottom-links">
       <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
