--- a/romantic-kit-hermeneutics.html
+++ b/romantic-kit-hermeneutics.html
@@ -18,7 +18,7 @@
     </div>
     <h1>A Romantic Method for Reading</h1>
 
-    <p>The Romantics didn't just have new ideas about art; they developed a new <em>method</em> for understanding it. At its heart is a radical premise from the philosopher Friedrich Schleiermacher: understanding is not our default state. <strong>Misunderstanding is the norm.</strong> Therefore, interpretation isn't a passive reception of meaning; it's a methodical art that must be "willed and sought at every point."</p>
+    <p>The Romantics didn't just have new ideas about art; they developed a new <em>method</em> for understanding it. This was a core part of their self-conscious project to define and champion a new literature against the prevailing standards of Neoclassicism.<sup><a href="#ref5">1</a></sup> At its heart is a radical premise from the philosopher Friedrich Schleiermacher: understanding is not our default state. <strong>Misunderstanding is the norm.</strong> Therefore, interpretation isn't a passive reception of meaning; it's a methodical art that must be "willed and sought at every point."</p>
     <p>This toolkit gives you that method. It’s a rigorous framework for analyzing a text by reconstructing the unique creative vision that gave it shape.</p>
 
     <h2>The Core Method: A Four-Step Loop</h2>
@@ -51,13 +51,18 @@
     <h2>The Goal of Interpretation</h2>
     <p>Schleiermacher’s most audacious claim is that the goal of this method is to understand an author "better than he understood himself." This is not a claim to superior intellect, but a statement about the nature of interpretation. The critic’s task is to make explicit the implicit patterns—the intuitive stylistic habits and unconscious assumptions—that the author followed in the act of creation. Interpretation is not merely a replication of the author's thoughts; it is an act of illumination that reveals the full, and often surplus, meaning of the work itself.</p>
 
-    <h3>Go Deeper (Open Sources)</h3>
+    <h3>Go Deeper (Open Sources & Scholarship)</h3>
     <ul>
       <li><strong>Theory:</strong> Stanford Encyclopedia of Philosophy on <a href="https://plato.stanford.edu/entries/hermeneutics/">Hermeneutics</a> and <a href="https://plato.stanford.edu/entries/schleiermacher/">Schleiermacher</a>.</li>
       <li><strong>Practice in Action (Primary Texts):</strong>
           <ul>
               <li>William Wordsworth, <a href="https://anthologydev.lib.virginia.edu/work/Wordsworth/wordsworth-preface">“Preface to Lyrical Ballads” (1802)</a> — A manifesto for a new kind of poetry.</li>
               <li>Samuel Taylor Coleridge, <a href="https://www.gutenberg.org/files/6081/6081-h/6081-h.htm"><em>Biographia Literaria</em></a> — Dives into the philosophical distinction between mechanic and organic form.</li>
+          </ul>
+      </li>
+      <li><strong>Scholarship:</strong>
+          <ul>
+              <li id="ref5">René Wellek, "The Concept of 'Romanticism' in Literary History," <em>Comparative Literature</em> (1949).</li>
           </ul>
       </li>
     </ul>
