--- a/romantic-kit-contexts-america.html
+++ b/romantic-kit-contexts-america.html
@@ -27,14 +27,18 @@
       <li><strong>The Critique of the <a href="romantic-kit-technology-machine.html">Machine</a> in the Garden:</strong> The American landscape itself—the "wilderness"—was a central character. The Romantics saw it as a source of spiritual renewal, an "organic Eden." Their critique of technology was often framed as a defense of this pastoral ideal against the encroachment of the "machine in the garden," as symbolized by the railroad and the factory.</li>
     </ul>
 
+    <h3>The Style of Vision: Transcendentalist Catalogue Rhetoric</h3>
+    <p>The American Romantics didn't just adopt European ideas; they forged a new style to express them. A key example is the "catalogue rhetoric" perfected by Emerson and Whitman. As the scholar Lawrence Buell has argued, the long, open-ended list was not a sign of formlessness but a deliberate artistic choice.<sup><a href="#ref1">1</a></sup> This style was designed to enact Transcendentalist philosophy: the expansive, non-hierarchical, and seemingly endless catalogue mirrored the belief in a democratic, boundless, and unified spiritual reality (the "Oversoul") present in every particular. The form was a direct expression of the vision, prioritizing the "boundless fecundity of nature and human life" over closed, traditional structures.</p>
+    
     <h3>The "Dark" Romantics: A Counterpoint</h3>
     <p>Not all American Romantics shared the Transcendentalists' optimism. Writers like Nathaniel Hawthorne, Herman Melville, and Edgar Allan Poe explored the darker side of the self and the ambiguities of nature. They probed themes of sin, obsession, and psychological horror, questioning the limits of self-reliance and the inherent goodness of the individual. Yet, they still operated within a Romantic framework, valuing emotion, symbolism, and the exploration of extreme mental states.</p>
     <p>Within the framework of the "circuitous journey," these writers represent a profound skepticism about the possibility of a successful return. If Emerson and Thoreau chart a course toward reintegration with the "Over-Soul," figures like Hawthorne and Melville explore the dark forests of the alienated mind, where the traveler remains haunted by sin and isolated from both nature and humanity. Their characters are often pilgrims on a failed quest, revealing the immense difficulty and potential tragedy of the Romantic project of self-redemption.</p>
     
-    <h3>Open Texts (The Primary Sources)</h3>
+    <h3>Open Texts & Scholarship</h3>
     <ul>
       <li>Ralph Waldo Emerson, <a href="https://nationalhumanitiescenter.org/pds/triumphnationalism/cman/text8/selfreliance.pdf"><em>Self-Reliance</em> (1841)</a> — The definitive statement of American intellectual and ethical independence.</li>
       <li>Henry David Thoreau, <a href="https://www.gutenberg.org/files/205/205-h/205-h.htm"><em>Walden</em> (1854)</a> — The record of a lived experiment in applying Romantic and Transcendentalist principles.</li>
+      <li id="ref1">Lawrence Buell, "Transcendentalist Catalogue Rhetoric: Vision Versus Form," <em>American Literature</em> (1968).</li>
     </ul>
     <div class="bottom-links">
       <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
