--- a/romantic-kit-organic-form.html
+++ b/romantic-kit-organic-form.html
@@ -27,6 +27,9 @@
       <li><strong>Organic Form:</strong> Form is innate. It "shapes, as it develops, itself from within." Like a plant from a seed, the form grows out of the work's specific content and purpose. The parts and the whole are interdependent; you cannot change one without altering the other.</li>
     </ul>
     <p>In the terms of our <a href="romantic-kit-hermeneutics.html">hermeneutic method</a>, a work has organic form when its <strong>grammatical</strong> structure (its language, genre, and shape) is a necessary and unique consequence of its singular <strong>psychological</strong> vision.</p>
+    
+    <h3>Schlegel and the 'Roman' as Organic Form</h3>
+    <p>While Coleridge is the most famous proponent of organic form in the English-speaking world, the concept has deep roots in German Romantic thought. Friedrich Schlegel's theory of the <em>Roman</em> (a term covering not just the novel but any great "mixed" modern work) is a direct parallel. For Schlegel, the ideal <em>Roman</em> was not a form imposed from the outside, but one that grew from within to encompass a complete vision of the world, fusing poetry and prose, philosophy and criticism, the fantastic and the realistic.<sup><a href="#ref1">1</a></sup> This vision of a "progressive universal poetry" is the ultimate expression of organicism: a form that is boundless because its purpose is to contain and unify everything.</p>
 
     <h3>Philosophical Roots: Nature as a Living Whole</h3>
     <p>This aesthetic theory grew out of a deeper philosophical shift, primarily in Germany.</p>
@@ -48,6 +51,11 @@
         <ul>
             <li>Stanford Encyclopedia of Philosophy on <a href="https://plato.stanford.edu/entries/schelling/">Schelling</a>.</li>
             <li>Samuel Taylor Coleridge, <a href="https://www.gutenberg.org/files/6081/6081-h/6081-h.htm"><em>Biographia Literaria</em></a> (especially Chapters XIII & XIV on Imagination vs. Fancy, which map onto the organic/mechanic distinction).</li>
+        </ul>
+      </li>
+      <li><strong>Scholarship:</strong>
+        <ul>
+          <li id="ref1">Hans Eichner, "Friedrich Schlegel's Theory of Romantic Poetry," <em>PMLA</em>, vol. 71, no. 5, 1956, pp. 1018–41. JSTOR, <a href="https://www.jstor.org/stable/460525" target="_blank">https://www.jstor.org/stable/460525</a>.</li>
         </ul>
       </li>
     </ul>
