line between ai posts

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
         <nav>
             <ul>
+                <li><a href="post65.html">65 On That Line Between Humans and Not-Humans</a></li>
+                <li><a href="post64.html">64 One Way I'm Really Different From Everyone</a></li>
                 <li><a href="post63.html">63 Three Roads Forward</a></li>
                 <li><a href="post62.html">62 A Practical Method for Reading AI: Archaeology and Teleology</a></li>
                 <li><a href="post61.html">61 A Conflict of Interpretations: Ricoeur's Method for Reading AI</a></li>
