--- a/post62.html
+++ b/post62.html
@@ -55,7 +55,7 @@
             </ol>
             <p>By using this Ricoeurian framework, you move beyond the simplistic and unanswerable question, "Does the AI <em>mean</em> what it 'says'?" and begin to engage with the far more productive and philosophically rich question, "What can be meant <em>through</em> it?" You treat the AI not as a fraudulent author, but as a powerful, eloquent, and deeply ambiguous cultural symbol that, above all, gives rise to thought.</p>
 
-            <p><a href="index.html">Home</a> | <a href="post61.html">Previous Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post61.html">Previous Post</a> | <a href="post63.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
