--- a/romantic-kit-organic-form.html
+++ b/romantic-kit-organic-form.html
@@ -28,7 +28,7 @@
     </ul>
     <p>In the terms of our <a href="romantic-kit-hermeneutics.html">hermeneutic method</a>, a work has organic form when its <strong>grammatical</strong> structure (its language, genre, and shape) is a necessary and unique consequence of its singular <strong>psychological</strong> vision.</p>
     
-    <h3>Schlegel and the 'Roman' as Organic Form</h3>
+    <h3>Schlegel and the <em>Roman</em> (novel) as Organic Form</h3>
     <p>While Coleridge is the most famous proponent of organic form in the English-speaking world, the concept has deep roots in German Romantic thought. Friedrich Schlegel's theory of the <em>Roman</em> (a term covering not just the novel but any great "mixed" modern work) is a direct parallel. For Schlegel, the ideal <em>Roman</em> was not a form imposed from the outside, but one that grew from within to encompass a complete vision of the world, fusing poetry and prose, philosophy and criticism, the fantastic and the realistic.<sup><a href="#ref1">1</a></sup> This vision of a "progressive universal poetry" is the ultimate expression of organicism: a form that is boundless because its purpose is to contain and unify everything.</p>
 
     <h3>Philosophical Roots: Nature as a Living Whole</h3>
