--- a/post63.html
+++ b/post63.html
@@ -31,7 +31,7 @@
             <p>Every major innovation has carried with it the twin possibilities of progress and destruction. The printing press spread both enlightenment and propaganda. Nuclear fission promised clean energy and delivered the bomb. This is just the human condition. This stance argues that opting out is not a real option; it's an abdication of responsibility. The only way forward is to renew our commitment to the messy, dangerous, and hopeful project of being human-plus-technology. It means engaging with AI not as an external threat, but as the next stage of our own evolution, with all the risks and responsibilities that entails. We have to participate, steer, and build the future, because the one thing we can't do is stop it from arriving.</p>
             <p>I don't know which road is the right one. Maybe they're not mutually exclusive. I spend a lot of time trying to figure out which direction I'm pointed in.</p>
 
-            <p><a href="index.html">Home</a> | <a href="post62.html">Previous Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post62.html">Previous Post</a> | <a href="post64.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
