two augustine posts

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
         <nav>
             <ul>
+                <li><a href="post67.html">67 Appropriating the Gold of the Machines</a></li>
+                <li><a href="post66.html">66 Augustine's Signs</a></li>
                 <li><a href="post65.html">65 On That Line Between Humans and Not-Humans</a></li>
                 <li><a href="post64.html">64 One Way I'm Really Different From Everyone</a></li>
                 <li><a href="post63.html">63 Three Roads Forward</a></li>
