fixed footer links in new posts

--- a/post66.html
+++ b/post66.html
@@ -27,7 +27,7 @@
                 ...we may proceed to open up and investigate the obscure passages, and in doing so draw examples from the plainer expressions to throw light upon the more obscure...
             </blockquote>
             <p>This is a hermeneutic based on the text's own internal structure, not on the reader's feeling of connection to the author. If a human-written text is already a detached system of signs that needs to be decoded, then an AI-generated text is just another system of signs. The hard line we want to draw between them starts to look pretty blurry. The fundamental task for the reader remains the same: interpret the signs to find the meaning. The "soul" of the author was never really in the equation to begin with.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post65.html">Previous Post</a> | <a href="post67.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post65.html">Previous Post</a> | <a href="post67.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
