--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
         <nav>
             <ul>
+                <li><a href="post68.html">68 The Unauthorized Exorcist and the Wicked Preacher</a></li>
                 <li><a href="post67.html">67 Appropriating the Gold of the Machines</a></li>
                 <li><a href="post66.html">66 Augustine's Signs</a></li>
                 <li><a href="post65.html">65 On That Line Between Humans and Not-Humans</a></li>
