fixed template and header links

--- a/post43.html
+++ b/post43.html
@@ -6,11 +6,18 @@
     <title>Post 43 - Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <script src="template.js"></script>
 </head>
 <body>
-    <header data-template="header">
-        <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+    <header class="site-header">
+      <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+      <nav class="top-links">
+        <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+          Romantic Quick Kit
+        </a>
+        <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+          AI Hermeneutics Kit
+        </a>
+      </nav>
     </header>
     <main>
         <article>
