--- a/post53.html
+++ b/post53.html
@@ -6,18 +6,22 @@
 <title>Post 53 - Professor Plate's Notebook</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-<script src="template.js"></script>
 <meta name="description" content="Introducing the 'Steelmanning the Romantics' series, a critical re-evaluation of the Romantic worldview as a fierce intellectual resistance to the Mechanical Age and its modern heir, AI."/>
 </head>
 <body>
-<header data-template="header">
-<h1><a href="index.html">Professor Plate's Notebook</a></h1>
-</header>
+    <header class="site-header">
+      <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+      <nav class="top-links">
+        <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+          Romantic Quick Kit
+        </a>
+        <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+          AI Hermeneutics Kit
+        </a>
+      </nav>
+    </header>
 <main>
 <article>
-<div class="top-links">
-<a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
-</div>
 <h2>53 Reconsidering the Romantics: Making It More Rigorous</h2>
 <p>For dozens of posts, I've been diagnosing what I call the "Romantic trace" in our contemporary debates about AI. I've argued that our anxieties about authenticity, the "human spark," and soulless machines are echoes of a worldview we inherited from the 1800s. It's a worldview I've suggested is inadequate for our current technological moment.</p>
 <p>But a critique is only as good as the version of the thing it criticizes. Maybe I've been attacking a sentimentalized caricature of the Romantic. By reducing it to a set of gut feelings, I may have underestimated my subject. True Romanticism wasn't just a mood; it was a fierce, coherent, and revolutionary worldview forged in direct opposition to what Thomas Carlyle called the "Mechanical Age." It was a spiritual and philosophical resistance to a world being remade by the logic of the machine. As scholars like René Wellek have demonstrated, the Romantic movement possessed an underlying intellectual unity across Europe, defined by a shared set of philosophical commitments and a conscious, programmatic opposition to Neoclassicism.<sup><a href="#ref1">1</a></sup></p>
