--- a/post55.html
+++ b/post55.html
@@ -6,18 +6,22 @@
 <title>Post 55 - Professor Plate's Notebook</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-<script src="template.js"></script>
 <meta name="description" content="Rejecting the 'bullshit' critique of AI as insufficient and applying a Romantic lens to reveal AI's output as meaningless chaos, not a textual unconscious."/>
 </head>
 <body>
-<header data-template="header">
-<h1><a href="index.html">Professor Plate's Notebook</a></h1>
-</header>
+    <header class="site-header">
+      <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+      <nav class="top-links">
+        <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+          Romantic Quick Kit
+        </a>
+        <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+          AI Hermeneutics Kit
+        </a>
+      </nav>
+    </header>
 <main>
 <article>
-<div class="top-links">
-<a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
-</div>
 <h2>55 More Than Bullshit: The Soulless Chaos of the Machine</h2>
 <p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>. But this critique is too generous. It grants the machine a semblance of agency. The bullshitter, after all, has a purpose. The rigorous Romantic toolkit reveals a deeper, more damning truth.</p>
 <p>Friedrich Schlegel argued that a great work "aims at more than it knows," carrying <strong>unconscious meanings</strong>. He believed a text's "confusions" and contradictions were themselves meaningful, revealing the author's internal struggles.<sup><a href="#ref1">1</a></sup> For a visionary like William Blake, art was a "Mental Fight," the struggle to give form to divine imagination.<sup><a href="#ref2">2</a></sup> Flaws and "confusions" in such a work are the scars of a noble battle. What happens when we apply this lens to AI?</p>
