--- a/post57.html
+++ b/post57.html
@@ -6,18 +6,23 @@
   <title>Post 57 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-  <script src="template.js"></script>
   <meta name="description" content="Arguing that the 'psychological rail' of Romantic hermeneutics is not a blind spot but a necessary tool for seeking a spiritual presence, an act that reveals AI's emptiness."/>
 </head>
 <body>
-  <header data-template="header">
+  <header class="site-header">
     <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+    <nav class="top-links">
+      <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+        Romantic Quick Kit
+      </a>
+      <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+        AI Hermeneutics Kit
+      </a>
+    </nav>
   </header>
   <main>
     <article>
-      <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
-      </div>
+
       <h2>57 The Search for the Divine Spark: Why the Ghost Matters</h2>
       <p>A purely systematic analysis of AI—looking only at datasets and algorithms—feels incomplete. The Romantic method, with its insistence on a <strong>double vision</strong>, seems to offer a richer path. It demands we analyze both the <strong>grammatical rail</strong> (the system) and the <strong>psychological rail</strong> (the singular practice).</p>
       <p>But we must remember <em>why</em> the Romantics insisted on this second rail. It wasn't naive optimism. For Schleiermacher, the "psychological rail" was a necessary discipline to bridge the vast gap between two human minds.<sup><a href="#ref1">1</a></sup> For a visionary like William Blake, the artist's psychology was the vessel for something even greater: the divine imagination. The author was a conduit for a spiritual reality. The search for the "ghost" in the text was a search for God.</p>
