--- a/post58.html
+++ b/post58.html
@@ -6,19 +6,24 @@
   <title>Post 58 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-  <script src="template.js"></script>
   <meta name="description" content="Concluding the 'Steelmanning the Romantics' series by showing how AI represents the ultimate fulfillment of the 'Mechanical Age' they feared."/>
 </head>
 <body>
-  <header data-template="header">
+  <header class="site-header">
     <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+    <nav class="top-links">
+      <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+        Romantic Quick Kit
+      </a>
+      <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+        AI Hermeneutics Kit
+      </a>
+    </nav>
   </header>
   <main>
     <article>
       <h2>58 The Final Triumph of the Mechanical Age: A Coda</h2>
-      <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
-      </div>
+
       <p>The boldest claim of Romantic hermeneutics is Schleiermacher's goal: to understand a work "better than [the author] understood himself."<sup><a href="#ref1">1</a></sup> This was an attempt to make an author's unconscious, divine inspiration explicit. But this entire project was forged in the fires of another revolution. The Romantics' fiercest enemy was not a rival philosophy, but a new vision of the world: what Thomas Carlyle famously diagnosed as "the Mechanical Age."<sup><a href="#ref2">2</a></sup></p>
       <p>Carlyle's critique, like William Blake's of the "dark Satanic Mills," was not just about factories.<sup><a href="#ref3">3</a></sup> It was about a world where "Men are grown mechanical in head and in heart," where living craft is replaced by the "speedier, inanimate one."<sup><a href="#ref2">2</a></sup> It was a spiritual crisis. The Romantics defined themselves in opposition to this deadening, mechanistic logic. Their entire worldview was a "Mental Fight" to defend the organic, the spiritual, and the divine human imagination against it.<sup><a href="#ref3">3</a></sup></p>
 
