--- a/post59.html
+++ b/post59.html
@@ -6,19 +6,22 @@
   <title>Post 59 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-  <script src="template.js"></script>
   <meta name="description" content="A final stress-test of the Romantic hermeneutic method, re-analyzing the 'Hero' music video to reveal the method's powers and its fierce moral commitments."/>
 </head>
 <body>
-  <header data-template="header">
+  <header class="site-header">
     <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+    <nav class="top-links">
+      <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+        Romantic Quick Kit
+      </a>
+      <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+        AI Hermeneutics Kit
+      </a>
+    </nav>
   </header>
   <main>
     <article>
-      <div class="kit-links-small">
-        <a href="romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
-        <a href="ai-hermeneutics-kit.html" class="kit-link-small">AI Hermeneutics Kit</a>
-      </div>
       <h2>59 Putting the Toolkit to Work: A Hermeneutic Stress-Test on "Hero"</h2>
       <p>In earlier posts (<a href="post45.html">45</a>-<a href="post50.html">50</a>), I read the "Hero" music video from several angles. To conclude this "Reconsidering the Romantics" series, I want to return to it as a final stress-test, applying the rigorous method from our <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to see not just what it reveals, but what it defends.</p>
 
