--- a/post2.html
+++ b/post2.html
@@ -6,12 +6,20 @@
     <title>Post 2 - Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <script src="template.js"></script>
 </head>
 <body>
-<header data-template="header">
-    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
-</header>    <main>
+    <header class="site-header">
+      <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+      <nav class="top-links">
+        <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+          Romantic Quick Kit
+        </a>
+        <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+          AI Hermeneutics Kit
+        </a>
+      </nav>
+    </header>
+    <main>
         <article>
             <h2>2 Hallucinations and Misinformation and AI</h2>
             <p>This is near the top of the list of things I can't understand. I know why journalists and historians don't like AI hallucinations and misinformation. Their job is to get the facts straight. But creative writing? It's hallucations all the way down. So I don't understand why fiction writers and poets worry about AI making stuff up. It's what we do.</p>
