--- a/post54.html
+++ b/post54.html
@@ -6,18 +6,22 @@
   <title>Post 54 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-  <script src="template.js"></script>
   <meta name="description" content="Testing the Romantic method of reconstructing an 'author' by applying it to an AI-generated poem, revealing the method's categorical rejection of soulless mechanism."/>
 </head>
 <body>
-<header data-template="header">
-<h1><a href="index.html">Professor Plate's Notebook</a></h1>
-</header>
+    <header class="site-header">
+      <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+      <nav class="top-links">
+        <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+          Romantic Quick Kit
+        </a>
+        <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+          AI Hermeneutics Kit
+        </a>
+      </nav>
+    </header>
 <main>
 <article>
-  <div class="top-links">
-    <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
-  </div>
   <h2>54 The Author-Function as Sacrilege: A Romantic Test</h2>
   <p>The most common critique of AI writing is that there is "no one there." This assumes the Romantic ideal of an "author" as a soul pouring its meaning into the text. But the rigorous Romantics started from a more skeptical place: Schleiermacher famously argued that <strong>misunderstanding is the norm</strong>, and therefore interpretation must be a disciplined art.<sup><a href="#ref1">1</a></sup> A core part of that art was reconstructing the author's singular practice.</p>
   <p>This wasn't just empathy; it was a formal method. It involved both a <strong>comparative</strong> analysis (tracing patterns against the rules of language) and a <strong>"divinatory"</strong> one, making a disciplined, intuitive leap to hypothesize the creative act that could produce such a text. So, let's run this more complex test. What happens when a Romantic interpreter confronts an AI?</p>
