--- a/post56.html
+++ b/post56.html
@@ -6,18 +6,22 @@
   <title>Post 56 - Professor Plate's Notebook</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-  <script src="template.js"></script>
   <meta name="description" content="Exploring the concept of 'synthetic individuality' and arguing from a Romantic perspective that it is a grotesque parody of the true, soul-based self."/>
 </head>
 <body>
-  <header data-template="header">
+  <header class="site-header">
     <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+    <nav class="top-links">
+      <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+        Romantic Quick Kit
+      </a>
+      <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+        AI Hermeneutics Kit
+      </a>
+    </nav>
   </header>
   <main>
     <article>
-      <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
-      </div>
       <h2>56 The Monstrous Parody of Synthetic Individuality</h2>
       <p>Critics often attack a strawman of Romantic "individuality," reducing it to a teenager's diary. But the rigorous definition is about <strong>structural integrity</strong> rooted in a unique inner vision. For the Romantics, the individual soul was the locus of the divine. William Blake spoke of the "Human Form Divine," seeing imagination as the very presence of God in humanity.<sup><a href="#ref1">1</a></sup> Individuality was not a mere pattern of style; it was the sensible evidence of an immortal, ineffable soul.</p>
       <p>This fierce commitment to a spiritually grounded self allows us to run a fascinating, and horrifying, experiment. Can we use the <a href="romantic-kit-hermeneutics.html">two-rail method</a> to identify a "synthetic individuality" in an AI's output?</p>
