--- a/post60.html
+++ b/post60.html
@@ -6,18 +6,21 @@
     <title>Post 60 - Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <script src="template.js"></script>
 </head>
 <body>
-    <header data-template="header">
-    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
-</header>
+    <header class="site-header">
+      <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+      <nav class="top-links">
+        <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+          Romantic Quick Kit
+        </a>
+        <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+          AI Hermeneutics Kit
+        </a>
+      </nav>
+    </header>
     <main>
         <article>
-            <div class="kit-links-small">
-                <a href="romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
-                <a href="ai-hermeneutics-kit.html" class="kit-link-small">AI Hermeneutics Kit</a>
-            </div>
             <h2>60 Sleep Well! The Unconscious Arrogance of Medieval Sermon Technology</h2>
             <p>Imagine walking into a medieval bookstore and finding a sermon collection titled <em>Dormi secure</em> (literally, "Sleep Well!") This wasn't false advertising or wishful thinking. It was a frank acknowledgment of purpose: here was a book of ready-made sermons designed specifically so that "an overworked or under-trained priest" could "sleep without worry" on Saturday night. Sunday's sermon was handled. No struggle required.</p>
 
