--- a/post66.html
+++ b/post66.html
@@ -6,27 +6,34 @@
     <title>Post 66 - Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <script src="template.js"></script>
 </head>
 <body>
-    <header data-template="header">
-        <h1>Professor Plate's Notebook</h1>
+    <header class="site-header">
+      <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+      <nav class="top-links">
+        <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+          Romantic Quick Kit
+        </a>
+        <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+          AI Hermeneutics Kit
+        </a>
+      </nav>
     </header>
     <main>
         <article>
             <h2>66 Augustine's Signs</h2>
-            <p>In my <a href="post65.html">last post</a>, I was thinking about Socrates and his critique of writing. The moment you write something down, it becomes an orphan, cut off from the living person who created it. This creates a problem for anyone who wants to draw a bright, sacred line between human-made texts and AI-made texts. The Socratic argument is that all written texts (human or not) are already separated from their source.</p>
+            <p>In my <a href="post65.html">last post</a>, I was thinking about Socrates and his critique of writing. The moment you write something down, it becomes an orphan, cut off from the living person who created it. This creates a problem for anyone who wants to draw a bright, sacred line between human-made texts and AI-made texts. The Socratic argument is that all written texts—human or not—are already separated from their source.</p>
             <p>This line of thinking isn't new. I was looking through Augustine's classic work on interpretation, <a href="https://www.ntslibrary.com/PDF%20Books/Augustine%20doctrine.pdf" target="_blank"><em>On Christian Doctrine</em></a>, and he provides a powerful framework for seeing a text not as a person, but as a system of signs.</p>
             <p>Early in the book, Augustine makes a crucial distinction:</p>
             <blockquote>
                 All instruction is either about things or about signs; but things are learnt by means of signs... For a sign is a thing which, over and above the impression it makes on the senses, causes something else to come into the mind as a consequence of itself.
             </blockquote>
-            <p>For Augustine, a written text is a collection of "conventional signs" (words) that we use to learn about "things" (ideas, concepts, the world). The reader's job isn't to have a mystical communion with the author's soul, the Whitman model I talked about in <a href="post25.html">Post 25</a>. The reader's job is to correctly interpret the system of signs to get at the meaning.</p>
+            <p>For Augustine, a written text is a collection of "conventional signs" (words) that we use to learn about "things" (ideas, concepts, the world). The reader's job isn't to have a <a href="romantic-kit-hermeneutics.html">mystical communion with the author's soul</a>. The Whitman model I talked about in <a href="post25.html">Post 25</a>. The reader's job is to correctly interpret the system of signs to get at the meaning.</p>
             <p>This is a profound shift in perspective. It treats the text as a kind of technology, a tool for conveying information. The whole process of reading becomes systematic, almost algorithmic. You learn the rules of the system (the language, the context) to decode the meaning. He lays it out like a method:</p>
             <blockquote>
                 ...we may proceed to open up and investigate the obscure passages, and in doing so draw examples from the plainer expressions to throw light upon the more obscure...
             </blockquote>
-            <p>This is a hermeneutic based on the text's own internal structure, not on the reader's feeling of connection to the author. If a human-written text is already a detached system of signs that needs to be decoded, then an AI-generated text is just another system of signs. The hard line we want to draw between them starts to look pretty blurry. The fundamental task for the reader remains the same: interpret the signs to find the meaning. The "soul" of the author was never really in the equation to begin with.</p>
+            <p>This is a hermeneutic based on the text's own internal structure, not on the reader's feeling of connection to the author. If a human-written text is already a detached system of signs that needs to be decoded, then an AI-generated text is just another system of signs. The hard line we want to draw between them starts to look pretty blurry. The fundamental task for the reader remains the same: interpret the signs to find the meaning. The "soul" of the author, as <a href="ai-kit-death-author.html">Roland Barthes would later argue</a>, was never really the point.</p>
             <p><a href="index.html">Home</a> | <a href="post65.html">Previous Post</a> | <a href="post67.html">Next Post</a></p>
         </article>
     </main>
