--- a/post67.html
+++ b/post67.html
@@ -6,17 +6,24 @@
     <title>Post 67 - Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-    <script src="template.js"></script>
 </head>
 <body>
-    <header data-template="header">
-        <h1>Professor Plate's Notebook</h1>
+    <header class="site-header">
+      <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+      <nav class="top-links">
+        <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+          Romantic Quick Kit
+        </a>
+        <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+          AI Hermeneutics Kit
+        </a>
+      </nav>
     </header>
     <main>
         <article>
             <h2>67 Appropriating the Gold of the Machines</h2>
-            <p>So if we follow the argument from the <a href="post66.html">last post</a>, all texts, whether from a human or an AI, are fundamentally systems of signs detached from their origin. But this leads to the big objection: "Okay, but surely the <em>source</em> matters? Doesn't a text have to come from an authentic human soul to be valuable?" This is the core of the Romantic argument I've been wrestling with, and it's the reason I rejected "authenticity" as a necessary condition for art back in <a href="post6.html">Post 6</a>.</p>
-            <p>It turns out Augustine had an answer to this, long before the Romantics. In <a href="https://www.ntslibrary.com/PDF%20Books/Augustine%20doctrine.pdf" target="_blank"><em>On Christian Doctrine</em></a>, he deals with a similar problem: Should Christians use the wisdom found in pagan philosophy? His answer is a definitive yes, and he uses a brilliant analogy.</p>
+            <p>So if we follow the argument from the <a href="post66.html">last post</a>, all texts, whether from a human or an AI, are fundamentally systems of signs detached from their origin. But this leads to the big objection: "Okay, but surely the <em>source</em> matters? Doesn't a text have to come from an <a href="romantic-kit-authenticity.html">authentic human soul</a> to be valuable?" This is the core of the <a href="romantic-quick-kit.html">Romantic argument</a> I've been wrestling with, and it's the reason I rejected "authenticity" as a necessary condition for art back in <a href="post6.html">Post 6</a>.</p>
+            <p>It turns out Augustine had a powerful answer to this, long before the Romantics. In <a href="https://www.ntslibrary.com/PDF%20Books/Augustine%20doctrine.pdf" target="_blank"><em>On Christian Doctrine</em></a>, he deals with a similar problem: Should Christians use the wisdom found in pagan philosophy? His answer is a definitive yes, and he uses a brilliant analogy.</p>
             <blockquote>
                 Moreover, if those who are called philosophers... have said aught that is true and in harmony with our faith, we are not only not to shrink from it, but to claim it for our own use from those who have unlawful possession of it. For, as the Egyptians had not only the idols... but also vessels and ornaments of gold and silver... which the same people when going out of Egypt appropriated to themselves, designing them for a better use... in the same way all branches of heathen learning... contain also liberal instruction which is better adapted to the use of the truth...
             </blockquote>
@@ -25,7 +32,7 @@
             <blockquote>
                 The man who speaks wisely and eloquently, but lives wickedly, may, it is true, instruct many who are anxious to learn... For though they seek their own objects, they do not dare to teach their own doctrines, sitting as they do in the high places of ecclesiastical authority, which is established on sound doctrine.
             </blockquote>
-            <p>The truth of the sermon isn't guaranteed by the pastor's personal virtue, but by the "seat" he occupies, the system of language and doctrine he is transmitting. This is a devastating critique of the modern obsession with authenticity. If meaning can be transmitted through a corrupt human source, it can surely be transmitted through an a-moral, non-human one. An AI has no personal virtue <em>or</em> vice. It just generates text. It's up to us to occupy the "seat" of the interpreter, to provide the purpose, and to appropriate the "gold."</p>
+            <p>The truth of the sermon isn't guaranteed by the pastor's personal virtue, but by the "seat" he occupies—the system of language and doctrine he is transmitting. This is a devastating critique of the modern obsession with authenticity. If meaning can be transmitted through a corrupt human source, it can surely be transmitted through an a-moral, non-human one. An AI has no personal virtue <em>or</em> vice. It just generates text. It's up to us to occupy the "seat" of the interpreter, to provide the purpose, and to appropriate the "gold." This way of thinking treats the author not as a person, but as what Foucault would later call an <a href="ai-kit-author-function.html">"author-function."</a></p>
             <p><a href="index.html">Home</a> | <a href="post66.html">Previous Post</a> | <a href="post68.html">Next Post</a></p>
         </article>
     </main>
