--- a/ai-hermeneutics-kit.html
+++ b/ai-hermeneutics-kit.html
@@ -16,6 +16,8 @@
       <div class="top-links">
         <a href="index.html" class="quickkit-pill-small">← Blog Home</a>
       </div>
+      <h2>A Really Big Caveat -- this entire section is a work in progress. The entire site is a work in progress, but this section is MORE of a work in progress. There are probably links that don't work, pages where I haven't explained what I'm thinking very well, etc. That being said, I also think there's plenty of intriguing and valuable theoretical content here. I'll be asking you all to help me think about it.</h2>
+
       <h1>AI Hermeneutics Kit</h1>
       <h2>How to use this</h2>
       <p>This kit provides the theoretical and historical context for the central arguments of this blog. Its purpose is to show that the interpretive challenges posed by AI are not entirely new, but are intensifications of questions that the field of hermeneutics has been exploring for centuries. The pages are designed to build a coherent framework, moving from theory to a practical method of reading.</p>
