--- a/postx.html
+++ b/postx.html
@@ -23,7 +23,7 @@
         <article>
             <h2>xx One Way I'm Really Different From Everyone</h2>
             <p>I could be wrong. Obviously I don't know everyone, so I can't know how many people are like me on this one thing. And I don't literally mean "everyone." I know one or two people who agree with me on this.</p>
-            <p><a href="index.html">Back to Home</a> | <a href="post65.html">Next Post</a></p>
+            <p><a href="index.html">Home</a> | <a href="post67.html">Previous Post</a> | <a href="post69.html">Next Post</a></p>
         </article>
     </main>
     <footer data-template="footer">
